build_log_utf8.txt
Reusing configuration cache.
> Task :createMinecraftArtifacts UP-TO-DATE

> Task :compileJava FAILED
.\gradlew.bat : C:\User
s\Jimmy\Documents\githu
b\Arcadia-RsPolymorph\s
rc\main\java\com\vyrrio
x\rspolymorph\RsPolymor
ph.java:11: error: 
cannot find symbol
Au caractère Ligne:1 : 
1
+ .\gradlew.bat 
compileJava > 
build_log.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (C:\Users\Jimm   
 y\...not find symb    
ol:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
import com.refinedmods.
refinedstorage.common.g
rid.CraftingGridScreen;
                       
                       
   ^
  symbol:   class 
CraftingGridScreen
  location: package com
.refinedmods.refinedsto
rage.common.grid
warning: unknown enum 
constant Status.STABLE
  reason: class file 
for org.apiguardian.api
.API$Status not found
warning: unknown enum 
constant Status.STABLE
warning: unknown enum 
constant Status.STABLE
C:\Users\Jimmy\Document
s\github\Arcadia-RsPoly
morph\src\main\java\com
\vyrriox\rspolymorph\Rs
Polymorph.java:90: 
error: cannot find 
symbol
            if (screen 
instanceof 
CraftingGridScreen || 
screen instanceof 
PatternGridScreen) {
                       
           ^
  symbol:   class 
CraftingGridScreen
  location: class 
RsPolymorph
warning: unknown enum 
constant 
Status.INTERNAL
warning: unknown enum 
constant 
Status.INTERNAL
warning: unknown enum 
constant 
Status.INTERNAL
warning: unknown enum 
constant 
Status.INTERNAL
warning: unknown enum 
constant 
Status.INTERNAL
Note: C:\Users\Jimmy\Do
cuments\github\Arcadia-
RsPolymorph\src\main\ja
va\com\vyrriox\rspolymo
rph\mixin\MixinRecipeMa
trix.java uses 
unchecked or unsafe 
operations.
Note: Recompile with 
-Xlint:unchecked for 
details.
2 errors
8 warnings

[Incubating] Problems report is available at: file:///C:/Users/Jimmy/Documents/github/Arcadia-RsPolymorph/build/reports/problems/problems-report.html

FAILURE: Build failed 
with an exception.

* What went wrong:
Execution failed for 
task ':compileJava'.
> Compilation failed; 
see the compiler 
output below.
  warning: unknown 
enum constant 
Status.STABLE
    reason: class file 
for org.apiguardian.api
.API$Status not found
  warning: unknown 
enum constant 
Status.STABLE
  warning: unknown 
enum constant 
Status.INTERNAL
  Note: C:\Users\Jimmy\
Documents\github\Arcadi
a-RsPolymorph\src\main\
java\com\vyrriox\rspoly
morph\mixin\MixinRecipe
Matrix.java uses 
unchecked or unsafe 
operations.
  C:\Users\Jimmy\Docume
nts\github\Arcadia-RsPo
lymorph\src\main\java\c
om\vyrriox\rspolymorph\
RsPolymorph.java:11: 
error: cannot find 
symbol
  import com.refinedmod
s.refinedstorage.common
.grid.CraftingGridScree
n;
                       
                       
     ^
    symbol:   class 
CraftingGridScreen
    location: package c
om.refinedmods.refineds
torage.common.grid
  C:\Users\Jimmy\Docume
nts\github\Arcadia-RsPo
lymorph\src\main\java\c
om\vyrriox\rspolymorph\
RsPolymorph.java:90: 
error: cannot find 
symbol
              if 
(screen instanceof 
CraftingGridScreen || 
screen instanceof 
PatternGridScreen) {
                       
             ^
    symbol:   class 
CraftingGridScreen
    location: class 
RsPolymorph
  Note: Recompile with 
-Xlint:unchecked for 
details.
  2 errors
  8 warnings

* Try:
> Check your code and 
dependencies to fix 
the compilation 
error(s)
> Run with --scan to 
generate a Build Scan 
(powered by 
Develocity).

BUILD FAILED in 2s
2 actionable tasks: 1 executed, 1 up-to-date
Configuration cache entry reused.
